objects/maps__AdvRoute__c.object
<CustomObject>
    <description>This will be used to group a set of Advanced Route waypoints into a single route</description>
    <fields>
        <fullName>maps__AdvRouteTemplateUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The is the Advanced Route template user associated to this route</description>
        <label>Maps Advanced Route Template User</label>
        <referenceTo>maps__AdvRouteTemplateUser__c</referenceTo>
        <relationshipLabel>Maps Advanced Routes</relationshipLabel>
        <relationshipName>AdvRoutes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__DrivingTimeMinutes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Driving Time (minutes)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DrivingTime__c</fullName>
        <formula>TEXT(FLOOR(maps__DrivingTimeMinutes__c / 60)) + &apos; hr &apos; + TEXT(CEILING(MOD(maps__DrivingTimeMinutes__c, 60))) + &apos; min&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Driving Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__ModifiedDrivingTime__c</fullName>
        <label>Modified Driving Time (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__ModifiedRouteLength__c</fullName>
        <label>Modified Route Length (miles)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__Options__c</fullName>
        <description>This is a JSON object of options used by Core Maps</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__OrderCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__RouteDate__c</fullName>
        <description>This is the date of the route</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Route Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__RouteEndTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Route End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__RouteJobId__c</fullName>
        <description>This is the job id that produced the route</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Route Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__RouteLengthKm__c</fullName>
        <formula>maps__RouteLengthMi__c * 1.60934</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route Length (km)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__RouteLengthMi__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Distance of route</description>
        <label>Route Length (miles)</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__RouteStartTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Route Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__TotalBreakTime__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Break Time</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__TotalOrderServiceTime__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Order Service Time</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__TotalTime__c</fullName>
        <defaultValue>0</defaultValue>
        <description>All Travel time, wait time, order service time, and break service time.</description>
        <label>Total Time</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__TotalViolationTime__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total violation time of the route</description>
        <label>Total Violation Time</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__TotalWaitTime__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total wait time for route</description>
        <label>Total Wait Time</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__UserName__c</fullName>
        <formula>maps__AdvRouteTemplateUser__r.maps__User__r.FirstName + &apos; &apos; + maps__AdvRouteTemplateUser__r.maps__User__r.LastName</formula>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__ViolatedConstraints__c</fullName>
        <label>Violated Constraints</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Maps Advanced Route</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Maps Advanced Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>